--- a/.github/workflows/ci-idris2-and-libs.yml
+++ b/.github/workflows/ci-idris2-and-libs.yml
@@ -99,13 +99,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
 
       # Get our hands on the released version either by using the cache
       # or by rebuilding it if necessary.
@@ -170,13 +170,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Make bootstrap folder readonly
         run: chmod -R a-w bootstrap
       - name: Build from bootstrap
@@ -211,12 +211,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
+          echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Install build dependencies
         run: |
           brew update
@@ -369,13 +370,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Build self-hosted
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted
@@ -406,13 +407,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Install build dependencies
         run: |
           brew update
@@ -481,13 +482,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Build self-hosted from previous version
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted from previous version
@@ -583,13 +584,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Build API
         run: make install-api
         shell: bash
@@ -634,13 +635,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -678,13 +679,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -725,13 +726,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -869,13 +870,13 @@ jobs:
           ./configure --threads --prefix="$HOME/chez"
           make
           make install
-      - name: Test Scheme
-        run: |
-          scheme --version
       - name: Set PATH
         run: |
           echo "$HOME/chez/bin" >> "$GITHUB_PATH"
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
       - name: Install build dependencies
         run: |
           sudo apt-get update
